--- a/wrappers/rust/icicle-core/Cargo.toml
+++ b/wrappers/rust/icicle-core/Cargo.toml
@@ -12,6 +12,7 @@ hex = "0.4"
 once_cell = "1.10.0" # how to have it in dev-deps?
 rayon = "1.8.1"
 rand = "0.8" # TODO move to dev-dependencies
+serde = "1.0.219"
 
 [dev-dependencies]
 criterion = "0.3"
